tests/sources/should-compile/all-operations.c

int x = 10;
int y = 2;
{
    // integer operations to be supported:
    x = x + y;
    x = x * x;
    x = x / 3;
    y = x % 2;
    x = x + 1;
    x ^ y;
    x = -1;
    
    // logical operations to be supported:
    x && y;
    x || y;
    x == y;
    x != y;
    x > y;
    x >= y;
    x < y;
    x <= y;
    !(x == y); 
}
