tests/sources/should-not-compile/switch-missing-brace.c
int x = 5;
switch (x)
{
case 1:
    x + 1;
case 3:
    x + 1;
default:
    x + 1;
